--- a/index.html
+++ b/index.html
@@ -71,44 +71,37 @@
       </div>
       <div class="low-visual">
         <div class="green-orange">
-          <div class="green">Скидки <br>
+          <div class="green">Скидки 50%<br>
             <a href="#" class="visual-link">На 350 товаров</a> </div>
           <div class="orange-deliv">Доставка <br>
             <a href="#"  class="visual-link">Бесплатно</a> </div>
         </div>
         <div class="big-slider">
-			<input type="radio" id="btn-1" name="toggle" checked>
-            <input type="radio" id="btn-2" name="toggle">
-			<input type="radio" id="btn-3" name="toggle">
-            <input type="radio" id="btn-4" name="toggle">
+          <input type="radio" id="btn-1" name="toggle" checked>
+          <input type="radio" id="btn-2" name="toggle">
+          <input type="radio" id="btn-3" name="toggle">
+          <input type="radio" id="btn-4" name="toggle">
           <div class="big-slider-controls">
-			 <label for="btn-1"></label>
-             <label for="btn-2"></label>
-			  </div>
-			  <div class="slider-rows">
-			 <label for="btn-3" class="left"></label>
-             <label for="btn-4" class="right"></label>
-			  </div>
-		  <div class="big-slider-inner">
-		    <div class="big-slider-slides">
-				<div class="blue-title">
-            <img src="img/tinified(for-sliders)/Layer 99.jpg" alt="yellow-hat" width="620" height="266">
-					<span>
-						<h3>Дрели</h3>
-						<p>Соседям на радость!</p>
-					</span>
-					</div>
-				<div class="yellow-title">
-            <img src="img/tinified(for-sliders)/Layer 98.jpg" alt="blue-hat" width="620" height="266">
-					<span>
-						<h3>Перфораторы</h3>
-						<p>Настоящие мужские игрушки</p>
-					</span>
-					</div>
-					  </div>
-				  </div>
-			<a href="#">Открыть каталог</a>
-        </div>
+            <label for="btn-1"></label>
+            <label for="btn-2"></label>
+          </div>
+          <div class="slider-rows">
+            <label for="btn-3" class="left"></label>
+            <label for="btn-4" class="right"></label>
+          </div>
+          <div class="big-slider-inner">
+            <div class="big-slider-slides">
+              <div class="blue-title"> <img src="img/tinified(for-sliders)/Layer99.jpg" alt="yellow-hat" width="620" height="266"> <div class="blue-desc">
+                <h3>Дрели</h3>
+                <p>Соседям на радость!</p>
+                </div> </div>
+              <div class="yellow-title"> <img src="img/tinified(for-sliders)/Layer98.jpg" alt="blue-hat" width="620" height="266"> <div class="yellow-desc">
+                <h3>Перфораторы</h3>
+                <p>Настоящие мужские игрушки</p>
+                </div> </div>
+            </div>
+          </div>
+          <a href="#">Открыть каталог</a> </div>
       </div>
     </section>
     <section class="popular-goods">
@@ -117,57 +110,57 @@
         <a href="#">Все популярные товары</a> </div>
       <ul class="items-main">
         <li class="item-flex"><img src="img/Perforator_4.jpg" alt="perforator Bosh BFG 9000 logo" width="218" height="170" class="perf-log">
-          <div class="buy-bookmarks"> <a href="#" class="buy">
+          <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
               <circle cx="4.5" cy="13.5" r="1.5"/>
               <circle cx="12.5" cy="13.5" r="1.5"/>
               <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
             </svg>
-            Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+            Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
           <div class="descrip-item">
-            <p class="product-name">Перфоратор Bosch BFG 9000</p>
+            <p class="product-name">Перфоратор BOSH BFG 9000</p>
             <p class="old-value">32500 Р.</p>
             <p class="new-value">25500 Р.</p>
           </div>
         </li>
         <li class="item-flex"><img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo" width="218" height="170" class="perf-log">
-          <div class="buy-bookmarks"> <a href="#" class="buy">
+          <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
               <circle cx="4.5" cy="13.5" r="1.5"/>
               <circle cx="12.5" cy="13.5" r="1.5"/>
               <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
             </svg>
-            Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+            Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
           <div class="descrip-item">
-            <p class="product-name">Перфоратор Bosch BFG 3000</p>
+            <p class="product-name">Перфоратор BOSH BFG 3000</p>
             <p class="old-value">22500 Р.</p>
             <p class="new-value">15500 Р.</p>
           </div>
         </li>
         <li class="item-flex"><img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000" width="218" height="170" class="perf-log">
-          <div class="buy-bookmarks"> <a href="#" class="buy">
+          <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
               <circle cx="4.5" cy="13.5" r="1.5"/>
               <circle cx="12.5" cy="13.5" r="1.5"/>
               <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
             </svg>
-            Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+            Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
           <div class="descrip-item">
-            <p class="product-name">Перфоратор Bosch BFG 6000</p>
+            <p class="product-name">Перфоратор BOSH BFG 6000</p>
             <p class="old-value">30500 Р.</p>
             <p class="new-value">25500 Р.</p>
           </div>
         </li>
         <li class="item-flex"> <img src="img/newflag.png" class="flag" alt="flag logo" width="60" height="60"> <img src="img/Perforator_3.jpg" alt="perforator Bosh BFG 2000" width="218" height="170" class="perf-log">
-          <div class="buy-bookmarks"> <a href="#" class="buy">
+          <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
             <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
               <circle cx="4.5" cy="13.5" r="1.5"/>
               <circle cx="12.5" cy="13.5" r="1.5"/>
               <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
             </svg>
-            Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+            Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
           <div class="descrip-item">
-            <p class="product-name">Перфоратор Bosch BFG 2000</p>
+            <p class="product-name">Перфоратор BOSH BFG 2000</p>
             <p class="new-value-rows">12500 Р.</p>
           </div>
         </li>
@@ -179,57 +172,57 @@
         <a href="#">Все производители</a> </div>
       <div class="brands"> <a href="#" class="brands-link"><img src="img/bosch.png" alt="bosch" width="126" height="37"></a> <a href="#" class="brands-link"><img src="img/Makita.png" alt="makita" width="123" height="40"></a> <a href="#" class="brands-link"><img src="img/DeWALT.png" alt="dewalt" width="146" height="44"></a> <a href="#" class="brands-link"><img src="img/Интерскол.png" alt="interskol" width="200" height="88"></a> <a href="#" class="brands-link"><img src="img/Hitachi.png" alt="hitachi" width="169" height="31"></a> <a href="#" class="brands-link"><img src="img/LG.png" alt="lg" width="121" height="73"></a> <a href="#" class="brands-link"><img src="img/AEG.png" alt="aeg" width="151" height="96"></a> <a href="#" class="brands-link"><img src="img/Metabo.png" alt="metabo" width="204" height="69"></a> </div>
     </section>
-	  </div>
-	<div class="services">
-		<div class="main-width">
-		<div class="main-services">
-			<div class="about-services">
-			<h3>Сервисы</h3>
-			<p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-			</div>
-	  <div class="services-slider">
-		  <input type="radio" class="deliv-button visually-hidden" id="dlv-button" checked>
-		  <input type="radio" class="guarantee-button visually-hidden" id="grt-button">
-		  <input type="radio" class="credit-button visually-hidden" id="crd-button">
-        <div class="services-slider-controls">
-		  <label for="dlv-button">Доставка</label>
-		  <label for="grt-button">Гарантия</label>
-		  <label for="crd-button">Кредит</label>
-		</div>
-        <div class="services-inner">
-          <div class="services-slides">
-			  <div class="deliv-slide">
-            <img src="img/tinified(for-sliders)/Layer 131.png" alt="car" width="465" height="285">
-				  <div class="deliv-descrip">
-					  <h3>Доставка</h3>
-						  <p>Мы с удовольствием доставим ваш товар прямо <br>к вашему подъезду совершенно бесплатно!
-						  <br>Ведь мы неплохо заработаем, <br>поднимая его на ваш этаж!</p>
-				  </div>
-				  </div>
-			  <div class="guarantee-slide">
-            <img src="img/tinified(for-sliders)/Layer 130.png" alt="medal" width="465" height="285">
-				  <div class="guarantee-descrip">
-					  <h3>Гарантия</h3>
-					  <p>Если купленный у нас товар поломается или заискрит, 
-<br>а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. 
-<br>Дом уж восстановите как-нибудь сами.</p>
-				  </div>
-				  </div>
-			  <div class="credit-slide">
-            <img src="img/tinified(for-sliders)/Layer 119.png" alt="money" width="465" height="285">
-				  <div class="credit-descrip">
-					  <h3>Кредит</h3>
-					  <p>Залезть в долговую яму стало проще! 
-<br>Кредитные консультанты придут вам на помощь.</p>
-				  </div>
-				  </div>
+  </div>
+  <div class="services">
+    <div class="main-width">
+      <div class="main-services">
+        <div class="about-services">
+          <h3>Сервисы</h3>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+        </div>
+        <div class="services-slider">
+          <input type="radio" class="deliv-button visually-hidden" id="dlv-button" name="serv-slider" checked>
+          <input type="radio" class="guarantee-button visually-hidden" id="grt-button" name="serv-slider">
+          <input type="radio" class="credit-button visually-hidden" id="crd-button" name="serv-slider">
+          <div class="services-slider-controls">
+            <label for="dlv-button">Доставка</label>
+            <label for="grt-button">Гарантия</label>
+            <label for="crd-button">Кредит</label>
+          </div>
+          <div class="add-left"></div>
+          <div class="services-inner">
+            <div class="services-slides">
+              <div class="deliv-slide"> <img src="img/tinified(for-sliders)/Layer131.png" alt="car" width="465" height="255">
+                <div class="deliv-descrip">
+                  <h3>Доставка</h3>
+                  <p>Мы с удовольствием доставим ваш товар прямо <br>
+                    к вашему подъезду совершенно бесплатно! <br>
+                    Ведь мы неплохо заработаем, <br>
+                    поднимая его на ваш этаж!</p>
+                </div>
+              </div>
+              <div class="guarantee-slide"> <img src="img/tinified(for-sliders)/Layer130.png" alt="medal" width="465" height="285">
+                <div class="guarantee-descrip">
+                  <h3>Гарантия</h3>
+                  <p>Если купленный у нас товар поломается или заискрит, <br>
+                    а также в случае пожара, спровоцированного его возгаранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. <br>
+                    Дом уж восстановите как-нибудь сами.</p>
+                </div>
+              </div>
+              <div class="credit-slide"> <img src="img/tinified(for-sliders)/Layer119.png" alt="money" width="465" height="285">
+                <div class="credit-descrip">
+                  <h3>Кредит</h3>
+                  <p>Залезть в долговую яму стало проще! <br>
+                    Кредитные консультанты придут вам на помощь.</p>
+                  <a href="#" class="slider-link">Отправить заявку</a> </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-		</div>
-		</div>
-	</div>
-	<div class="main-width">
+    </div>
+  </div>
+  <div class="main-width">
     <section class="add-info">
       <div class="company-descrip">
         <h3>Компания "Техномарт"</h3>
@@ -256,11 +249,11 @@
         <h3>Контакты</h3>
         <p class="add-info-text-map">Вы можете забрать товар сами,
           заехав в наш офис:</p>
-        <a href="#"><img src="img/map.png" alt="map logo" width="300" height="158"></a>
+        <a href="#" class="map-appear" onclick="openMap()"><img src="img/map.png" alt="maplogo" width="300" height="158"> </a>
         <div class="visually-hidden"><img src="#" alt="big map logo">
           <button></button>
         </div>
-        <a href="#" class="write-to-us">Заблудились? Напишите нам!</a> </div>
+        <a href="#" class="write-to-us" onclick="openForm()">Заблудились? Напишите нам!</a> </div>
     </section>
   </div>
 </main>
@@ -283,7 +276,7 @@
     <div class="main-width">
       <div class="down-info">
         <div class="sign">
-          <p>© 2010-2017 Компания "Техномарт"<br>
+          <p>© 2010-2019 Компания "Техномарт"<br>
             Все права защищены</p>
         </div>
         <div class="social-networks">
@@ -311,7 +304,7 @@
             </tr>
             <tr class="tab-links">
               <td><a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></td>
-              <td><a href="www.htmlacademy.ru">htmlacademy.ru</a></td>
+              <td><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></td>
             </tr>
           </table>
         </div>
@@ -319,20 +312,41 @@
     </div>
   </section>
 </footer>
-<div class="visually-hidden">
-  <form action="#" method="post">
-    <label>Ваше имя:
-      <input type="text" name="your_name" placeholder="Имя Фамилия">
-    </label>
-    <label>Ваш E-mail:
-      <input type="text" name="your_name" placeholder="email@example.com">
-    </label>
-    <label>Текст письма:
-      <input type="text" name="your_name" placeholder="В свободной форме">
-    </label>
-    <input type="submit" name="send" value="Отправить">
-    <button name="exit"></button>
+<div class="write-popup" id="popupWrite">
+  <form action="#" method="post" class="popup-menu">
+    <button name="exit" class="exit-popup-write" onclick="closeForm()"></button>
+    <div class="mail-name">
+      <div class="your-name">
+        <label>Ваше имя: <br>
+          <input type="text" name="your_name" placeholder="Имя Фамилия" class="name-cast">
+        </label>
+      </div>
+      <div class="your-mail">
+        <label>Ваш E-mail: <br>
+          <input type="text" name="your_name" placeholder="email@example.com" class="mail-cast">
+        </label>
+      </div>
+    </div>
+    <div class="letter">
+      <label>Текст письма: <br>
+        <input type="text" name="your_name" placeholder="В свободной форме" class="text-write">
+      </label>
+    </div>
+    <div class="cast-button">
+      <input type="submit" name="send" value="Отправить" class="send-letter">
+    </div>
   </form>
 </div>
+<img src="img/Mapbig.png" width="970" height="476" alt="big-map" class="big-map" onclick="closeMap()" id="popupMap">
+<div class="popup-cart" id="popupCart">
+  <div class="ok-check"> <img src="img/form-1.png" alt="ok-icon" width="66" height="66">
+    <p>Товар добавлен в корзину!</p>
+  </div>
+  <div class="cart-flex-wrap">
+    <div class="cart-flex-pop"> <a href="#" class="make-order">Оформить заказ</a> <a href="#" class="make-buying">Продолжить покупки</a> </div>
+  </div>
+  <button name="exit" class="cart-exit" onclick="closeCart()"></button>
+</div>
+<script src="js/Popups.js"></script>
 </body>
 </html>
