--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
   <nav class="color-nav">
     <div class="main-width">
       <div class="upper-menu"> <a href="index.html" class="upper-logo"><img src="img/technomart.svg" class="upper-technomart" alt="technomart logo" width="108" height="18"> </a>
-        <form action="#" method="get"  class="search">
+        <form action="#" method="get" class="search">
           <a href="#" class="glass">
           <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" class="glass-icon">
             <path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
@@ -73,14 +73,44 @@
 </header>
 <main>
   <div class="main-width">
-    <div class="navigation"> <a href="index.html"><img src="img/icon-home.svg" alt="house logo" width="14" height="12"></a> <img src="img/icon-right-small.svg" alt="arrow logo" width="8" height="12"> <a href="catalog.html">Каталог</a> <img src="img/icon-right-small.svg" alt="arrow logo" width="8" height="12"> <a href="#">Инструмент</a> <img src="img/icon-right-small.svg" alt="arrow logo" width="8" height="12"> <a href="#">Перфораторы</a> </div>
+    <div class="navigation"><a href="index.html"><img src="img/icon-home.svg" alt="house logo" width="14" height="12"></a><img src="img/icon-right-small.svg" alt="arrow logo" width="8" height="12"><a href="catalog.html">Каталог</a><img src="img/icon-right-small.svg" alt="arrow logo" width="8" height="12" class="points-right"> <a href="#">Инструмент</a><img src="img/icon-right-small.svg" alt="arrow logo" width="8" height="12" class="points-right"> <a href="#">Перфораторы</a> </div>
     <section class="sub-menu">
       <div class="perf">
         <h3>Перфораторы</h3>
       </div>
+      <div class="filters-sorting">
+        <div class="filter">Фильтр:</div>
+        <div class="sort">
+          <h3>Сортировка:</h3>
+          <p class="cost">По цене</p>
+          <p class="types">По типу</p>
+          <p class="functions">По функционалу</p>
+          <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" class="threeangle">
+            <path d="M5.5 10L0 0h11"/>
+          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" class="threeangle-down">
+            <path d="M5.5 10L0 0h11"/>
+          </svg>
+        </div>
+      </div>
       <div class="goods-flex-cat">
         <div class="make-a-choise">
-          <form action="#" method="get" class="form-pad">
+          <form action="#" method="post" class="form-pad" oninput="costoutput.value=costcount.value">
+            <div class="range-flex">
+              <label for="costcount">Цена:</label>
+              <br>
+              <div class="range-cont">
+                <input type="range" id="costcount" name="costcount" min="5000" max="40000" step="100" class="range-style">
+              </div>
+            </div>
+            <div class="output-area">
+              <div class="start-count">0</div>
+              <div class="dash-between"></div>
+              <div class="start-count">
+                <output name="costoutput"></output>
+              </div>
+            </div>
+            <div class="linebetween"></div>
             <h4 class="form-describe">Производители:</h4>
             <ul>
               <li>
@@ -109,6 +139,7 @@
                   Hitachi <span class="checkbox-indicator"></span> </label>
               </li>
             </ul>
+            <div class="linebetween"></div>
             <h4 class="form-describe">Питание:</h4>
             <ul>
               <li>
@@ -128,132 +159,142 @@
         <div class="list-of-goods">
           <ul class="items">
             <li class="item-flex"><img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo" width="218" height="170" class="perf-log">
-              <div class="buy-bookmarks"> <a href="#" class="buy">
+              <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
                   <circle cx="4.5" cy="13.5" r="1.5"/>
                   <circle cx="12.5" cy="13.5" r="1.5"/>
                   <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
                 </svg>
-                Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+                Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
               <div class="descrip-item">
-                <p class="product-name">Перфоратор Bosh BFG 3000</p>
+                <p class="product-name">Перфоратор BOSCH BFG 3000</p>
                 <p class="old-value">22500 Р.</p>
                 <p class="new-value">15500 Р.</p>
               </div>
             </li>
             <li class="item-flex"><img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000" width="218" height="170" class="perf-log">
-              <div class="buy-bookmarks"> <a href="#" class="buy">
+              <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
                   <circle cx="4.5" cy="13.5" r="1.5"/>
                   <circle cx="12.5" cy="13.5" r="1.5"/>
                   <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
                 </svg>
-                Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+                Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
               <div class="descrip-item">
-                <p class="product-name">Перфоратор Bosh BFG 6000</p>
+                <p class="product-name">Перфоратор BOSCH BFG 6000</p>
                 <p class="old-value">30500 Р.</p>
                 <p class="new-value">25500 Р.</p>
               </div>
             </li>
             <li class="item-flex"> <img src="img/newflag.png" class="flag" alt="flag logo" width="60" height="60"> <img src="img/Perforator_3.jpg" alt="perforator Bosh BFG 2000" width="218" height="170" class="perf-log">
-              <div class="buy-bookmarks"> <a href="#" class="buy">
+              <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
                   <circle cx="4.5" cy="13.5" r="1.5"/>
                   <circle cx="12.5" cy="13.5" r="1.5"/>
                   <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
                 </svg>
-                Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+                Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
               <div class="descrip-item">
-                <p class="product-name">Перфоратор Bosh BFG 2000</p>
+                <p class="product-name">Перфоратор BOSCH BFG 2000</p>
                 <p class="new-value-rows">12500 Р.</p>
               </div>
             </li>
             <li class="item-flex"><img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo" width="218" height="170" class="perf-log">
-              <div class="buy-bookmarks"> <a href="#" class="buy">
+              <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
                   <circle cx="4.5" cy="13.5" r="1.5"/>
                   <circle cx="12.5" cy="13.5" r="1.5"/>
                   <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
                 </svg>
-                Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+                Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
               <div class="descrip-item">
-                <p class="product-name">Перфоратор Bosh BFG 3000</p>
+                <p class="product-name">Перфоратор BOSCH BFG 3000</p>
                 <p class="old-value">22500 Р.</p>
                 <p class="new-value">15500 Р.</p>
               </div>
             </li>
             <li class="item-flex"> <img src="img/newflag.png" class="flag" alt="flag logo" width="60" height="60"> <img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000" width="218" height="170" class="perf-log">
-              <div class="buy-bookmarks"> <a href="#" class="buy">
+              <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
                   <circle cx="4.5" cy="13.5" r="1.5"/>
                   <circle cx="12.5" cy="13.5" r="1.5"/>
                   <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
                 </svg>
-                Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+                Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
               <div class="descrip-item">
-                <p class="product-name">Перфоратор Bosh BFG 6000</p>
+                <p class="product-name">Перфоратор BOSCH BFG 6000</p>
                 <p class="old-value">30500 Р.</p>
                 <p class="new-value">25500 Р.</p>
               </div>
             </li>
             <li class="item-flex"><img src="img/Perforator_3.jpg" alt="perforator Bosh BFG 2000" width="218" height="170" class="perf-log">
-              <div class="buy-bookmarks"> <a href="#" class="buy">
+              <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
                   <circle cx="4.5" cy="13.5" r="1.5"/>
                   <circle cx="12.5" cy="13.5" r="1.5"/>
                   <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
                 </svg>
-                Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+                Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
               <div class="descrip-item">
-                <p class="product-name">Перфоратор Bosh BFG 2000</p>
+                <p class="product-name">Перфоратор BOSCH BFG 2000</p>
                 <p class="new-value-rows">12500 Р.</p>
               </div>
             </li>
             <li class="item-flex"> <img src="img/newflag.png" class="flag" alt="flag logo" width="60" height="60"> <img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo" width="218" height="170" class="perf-log">
-              <div class="buy-bookmarks"> <a href="#" class="buy">
+              <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
                   <circle cx="4.5" cy="13.5" r="1.5"/>
                   <circle cx="12.5" cy="13.5" r="1.5"/>
                   <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
                 </svg>
-                Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+                Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
               <div class="descrip-item">
-                <p class="product-name">Перфоратор Bosh BFG 3000</p>
+                <p class="product-name">Перфоратор BOSCH BFG 3000</p>
                 <p class="old-value">22500 Р.</p>
                 <p class="new-value">15500 Р.</p>
               </div>
             </li>
             <li class="item-flex"><img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000" width="218" height="170" class="perf-log">
-              <div class="buy-bookmarks"> <a href="#" class="buy">
+              <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
                   <circle cx="4.5" cy="13.5" r="1.5"/>
                   <circle cx="12.5" cy="13.5" r="1.5"/>
                   <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
                 </svg>
-                Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+                Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
               <div class="descrip-item">
-                <p class="product-name">Перфоратор Bosh BFG 6000</p>
+                <p class="product-name">Перфоратор BOSCH BFG 6000</p>
                 <p class="old-value">30500 Р.</p>
                 <p class="new-value">25500 Р.</p>
               </div>
             </li>
             <li class="item-flex"><img src="img/Perforator_3.jpg" alt="perforator Bosh BFG 2000" width="218" height="170" class="perf-log">
-              <div class="buy-bookmarks"> <a href="#" class="buy">
+              <div class="buy-bookmarks"> <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
                   <circle cx="4.5" cy="13.5" r="1.5"/>
                   <circle cx="12.5" cy="13.5" r="1.5"/>
                   <path d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
                 </svg>
-                Купить</a> <a href="#" class="bookmarks">В закладки</a> </div>
+                Купить</a> <a href="#" class="bookmarks" onclick="openCart()">В закладки</a> </div>
               <div class="descrip-item">
-                <p class="product-name">Перфоратор Bosh BFG 2000</p>
+                <p class="product-name">Перфоратор BOSCH BFG 2000</p>
                 <p class="new-value-rows">12500 Р.</p>
               </div>
             </li>
           </ul>
         </div>
       </div>
+      <div class="change-page"> <a href="#1">1</a> <a href="#2">2</a> <a href="#3">3</a> <a href="#next" class="next">Следующая</a> </div>
     </section>
+  </div>
+  <div class="cat-subscription">
+    <div class="main-width">
+      <div class="about-perf">
+        <h3>Пара слов о перфораторах</h3>
+        <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. <br>
+          Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+      </div>
+    </div>
   </div>
 </main>
 <footer>
@@ -303,7 +344,7 @@
             </tr>
             <tr class="tab-links">
               <td><a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></td>
-              <td><a href="www.htmlacademy.ru">htmlacademy.ru</a></td>
+              <td><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></td>
             </tr>
           </table>
         </div>
@@ -311,10 +352,15 @@
     </div>
   </section>
 </footer>
-<div class="visually-hidden">
-  <p>Товар добавлен в корзину!</p>
-  <a href="#">Оформить заказ</a> <a href="#">Продолжить покупки</a>
-  <button name="exit"></button>
+<div class="popup-cart" id="popupCart">
+  <div class="ok-check"> <img src="img/form-1.png" alt="ok-icon" width="66" height="66">
+    <p>Товар добавлен в корзину!</p>
+  </div>
+  <div class="cart-flex-wrap">
+    <div class="cart-flex-pop"> <a href="#" class="make-order">Оформить заказ</a> <a href="#" class="make-buying">Продолжить покупки</a> </div>
+  </div>
+  <button name="exit" class="cart-exit" onclick="closeCart()"></button>
 </div>
+<script src="js/Popups.js"></script>
 </body>
 </html>
