--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,7 @@
 			<div class="main-width">
 				<div class="second-menu">
 					<h2 class="main-describe">Интернет-магазин
-          строительных материалов<br>
+          строительных материалов&nbsp;&nbsp;
           и инструментов для ремонта </h2>
 					<div class="call-adress-cat">
 						<a href="tel:+78125550555" class="tel">
