--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<section class="main-info">
 			<div class="main-width">
 				<div class="second-menu">
-					<h2 class="main-describe">Интернет-магазин строительных материалов <br>
+					<h2 class="main-describe">Интернет-магазин строительных материалов&nbsp;&nbsp;&nbsp;&nbsp;
           и инструментов для ремонта </h2>
 					<div class="call-adress">
 						<a href="tel:+78125550555" class="tel">
