--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>HTML Academy: Техномарт</title>
 	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i%7CPT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet"> </head>
+	<link href="css/style-min.css" rel="stylesheet"> </head>
 
 <body>
 	<header>
@@ -81,13 +81,13 @@
 						</div>
 						<div class="big-slider-inner">
 							<div class="big-slider-slides">
-								<div class="blue-title"> <img src="img/tinified(for-sliders)/Layer99.jpg" alt="yellow-hat" width="620" height="266">
+								<div class="blue-title"> <img src="img/tinified(for-sliders)/layer99.jpg" alt="yellow-hat" width="620" height="266">
 									<div class="blue-desc">
 										<h3>Дрели</h3>
 										<p>Соседям на радость!</p>
 									</div>
 								</div>
-								<div class="yellow-title"> <img src="img/tinified(for-sliders)/Layer98.jpg" alt="blue-hat" width="620" height="266">
+								<div class="yellow-title"> <img src="img/tinified(for-sliders)/layer98.jpg" alt="blue-hat" width="620" height="266">
 									<div class="yellow-desc">
 										<h3>Перфораторы</h3>
 										<p>Настоящие мужские игрушки</p>
@@ -101,7 +101,7 @@
 				<div class="popular-header">
 					<h3>Популярные товары:</h3> <a href="#">Все популярные товары</a> </div>
 				<ul class="items-main">
-					<li class="item-flex"><img src="img/Perforator_4.jpg" alt="perforator Bosh BFG 9000 logo" width="218" height="170" class="perf-log">
+					<li class="item-flex"><img src="img/perforator_4.jpg" alt="perforator Bosh BFG 9000 logo" width="218" height="170" class="perf-log">
 						<div class="buy-bookmarks">
 							<a href="#" class="buy" onclick="openCart()">
 								<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
@@ -114,7 +114,7 @@
 							<p class="new-value">25500 Р.</p>
 						</div>
 					</li>
-					<li class="item-flex"><img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo" width="218" height="170" class="perf-log">
+					<li class="item-flex"><img src="img/perforator_1.jpg" alt="perforator Bosh BFG 3000 logo" width="218" height="170" class="perf-log">
 						<div class="buy-bookmarks">
 							<a href="#" class="buy" onclick="openCart()">
 								<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
@@ -127,7 +127,7 @@
 							<p class="new-value">15500 Р.</p>
 						</div>
 					</li>
-					<li class="item-flex"><img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000" width="218" height="170" class="perf-log">
+					<li class="item-flex"><img src="img/perforator_2.jpg" alt="perforator Bosh BFG 6000" width="218" height="170" class="perf-log">
 						<div class="buy-bookmarks">
 							<a href="#" class="buy" onclick="openCart()">
 								<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
@@ -140,7 +140,7 @@
 							<p class="new-value">25500 Р.</p>
 						</div>
 					</li>
-					<li class="item-flex"> <img src="img/newflag.png" class="flag" alt="flag logo" width="57" height="60"> <img src="img/Perforator_3.jpg" alt="perforator Bosh BFG 2000" width="218" height="170" class="perf-log">
+					<li class="item-flex"> <img src="img/newflag.png" class="flag" alt="flag logo" width="57" height="60"> <img src="img/perforator_3.jpg" alt="perforator Bosh BFG 2000" width="218" height="170" class="perf-log">
 						<div class="buy-bookmarks">
 							<a href="#" class="buy" onclick="openCart()">
 								<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
@@ -188,16 +188,16 @@
 						<div class="add-left"></div>
 						<div class="services-inner">
 							<div class="services-slides">
-								<div class="deliv-slide"> <img src="img/tinified(for-sliders)/Layer131.png" alt="car" width="465" height="255">
+								<div class="deliv-slide"> <img src="img/tinified(for-sliders)/layer131.png" alt="car" width="465" height="255">
 									<div class="deliv-descrip">
 										<h3>Доставка</h3>
 										<p>Мы с удовольствием доставим ваш товар прямо
 											<br> к вашему подъезду совершенно бесплатно!
-											<br> Ведь мы неплохо заработаем,
+											Ведь мы неплохо заработаем,
 											<br> поднимая его на ваш этаж!</p>
 									</div>
 								</div>
-								<div class="guarantee-slide"> <img src="img/tinified(for-sliders)/Layer130.png" alt="medal" width="389" height="255">
+								<div class="guarantee-slide"> <img src="img/tinified(for-sliders)/layer130.png" alt="medal" width="389" height="255">
 									<div class="guarantee-descrip">
 										<h3>Гарантия</h3>
 										<p>Если купленный у нас товар поломается или заискрит,
@@ -205,7 +205,7 @@
 											<br> Дом уж восстановите как-нибудь сами.</p>
 									</div>
 								</div>
-								<div class="credit-slide"> <img src="img/tinified(for-sliders)/Layer119.png" alt="money" width="465" height="255">
+								<div class="credit-slide"> <img src="img/tinified(for-sliders)/layer119.png" alt="money" width="465" height="255">
 									<div class="credit-descrip">
 										<h3>Кредит</h3>
 										<p>Залезть в долговую яму стало проще!
@@ -337,7 +337,7 @@
 		</div>
 		<button name="exit" class="cart-exit" onclick="closeCart()"></button>
 	</div>
-	<script src="js/popups.js"></script>
+	<script src="js/popups-min.js"></script>
 </body>
 
 </html>
