--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 	<title>HTML Academy: Техномарт</title>
 	<link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i%7CPT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet"> </head>
+	<link href="css/style-min.css" rel="stylesheet"> </head>
 
 <body>
 	<header>
@@ -337,7 +337,7 @@
 		</div>
 		<button name="exit" class="cart-exit" onclick="closeCart()"></button>
 	</div>
-	<script src="js/popups.js"></script>
+	<script src="js/popups-min.js"></script>
 </body>
 
 </html>
