--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <a href="#" class="brands-link"><img src="img/interskol.png" alt="interskol" width="200" height="88"></a>
           <a href="#" class="brands-link"><img src="img/hitachi.png" alt="hitachi" width="169" height="31"></a>
           <a href="#" class="brands-link"><img src="img/lg.png" alt="lg" width="121" height="73"></a>
-          <a href="#" class="brands-link"><img src="img/aeg.png" alt="aeg" width="151" height="96"></a>
+          <a href="#" class="brands-link"><img src="img/AEG.png" alt="aeg" width="151" height="96"></a>
           <a href="#" class="brands-link"><img src="img/metabo.png" alt="metabo" width="204" height="69"></a>
         </div>
       </section>
