--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
           <h3>Популярные производители:</h3> <a href="#">Все производители</a> </div>
         <div class="brands">
           <a href="#" class="brands-link"><img src="img/bosch.png" alt="bosch" width="126" height="37"></a>
-          <a href="#" class="brands-link"><img src="img/makita.png" alt="makita" width="123" height="40"></a>
-          <a href="#" class="brands-link"><img src="img/dewalt.png" alt="dewalt" width="146" height="44"></a>
+          <a href="#" class="brands-link"><img src="img/Makita.png" alt="makita" width="123" height="40"></a>
+          <a href="#" class="brands-link"><img src="img/DeWALT.png" alt="dewalt" width="146" height="44"></a>
           <a href="#" class="brands-link"><img src="img/interskol.png" alt="interskol" width="200" height="88"></a>
-          <a href="#" class="brands-link"><img src="img/hitachi.png" alt="hitachi" width="169" height="31"></a>
-          <a href="#" class="brands-link"><img src="img/lg.png" alt="lg" width="121" height="73"></a>
+          <a href="#" class="brands-link"><img src="img/Hitachi.png" alt="hitachi" width="169" height="31"></a>
+          <a href="#" class="brands-link"><img src="img/LG.png" alt="lg" width="121" height="73"></a>
           <a href="#" class="brands-link"><img src="img/AEG.png" alt="aeg" width="151" height="96"></a>
-          <a href="#" class="brands-link"><img src="img/metabo.png" alt="metabo" width="204" height="69"></a>
+          <a href="#" class="brands-link"><img src="img/Metabo.png" alt="metabo" width="204" height="69"></a>
         </div>
       </section>
     </div>
