--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
   <div class="big-map" id="popupMap">
     <button name="exit" class="exit-popup-map" onclick="closeMap()"></button>
   <a href="https://yandex.ru/maps/?um=constructor%3A4424b5163421cb94d910dd2495dfcc330d6535b46c140e474032e9efdf878f72&source=constructorLink">
-    <img src="img/mapbig.png" width="970" height="476" alt="big-map">
+    <img src="img/Mapbig.png" width="970" height="476" alt="big-map">
     </a>
   </div>
   <div class="popup-cart" id="popupCart">
