--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="popular-header">
           <h3>Популярные товары:</h3> <a href="#">Все популярные товары</a> </div>
         <ul class="items-main">
-          <li class="item-flex"><img src="img/perforator_4.jpg" alt="perforator Bosh BFG 9000 logo" width="218" height="170" class="perf-log">
+          <li class="item-flex"><img src="img/Perforator_4.jpg" alt="perforator Bosh BFG 9000 logo" width="218" height="170" class="perf-log">
             <div class="buy-bookmarks">
               <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
@@ -114,7 +114,7 @@
               <p class="new-value">25500 Р.</p>
             </div>
           </li>
-          <li class="item-flex"><img src="img/perforator_1.jpg" alt="perforator Bosh BFG 3000 logo" width="218" height="170" class="perf-log">
+          <li class="item-flex"><img src="img/Perforator_1.jpg" alt="perforator Bosh BFG 3000 logo" width="218" height="170" class="perf-log">
             <div class="buy-bookmarks">
               <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
@@ -127,7 +127,7 @@
               <p class="new-value">15500 Р.</p>
             </div>
           </li>
-          <li class="item-flex"><img src="img/perforator_2.jpg" alt="perforator Bosh BFG 6000" width="218" height="170" class="perf-log">
+          <li class="item-flex"><img src="img/Perforator_2.jpg" alt="perforator Bosh BFG 6000" width="218" height="170" class="perf-log">
             <div class="buy-bookmarks">
               <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
@@ -140,7 +140,7 @@
               <p class="new-value">25500 Р.</p>
             </div>
           </li>
-          <li class="item-flex"> <img src="img/newflag.png" class="flag" alt="flag logo" width="57" height="60"> <img src="img/perforator_3.jpg" alt="perforator Bosh BFG 2000" width="218" height="170" class="perf-log">
+          <li class="item-flex"> <img src="img/newflag.png" class="flag" alt="flag logo" width="57" height="60"> <img src="img/Perforator_3.jpg" alt="perforator Bosh BFG 2000" width="218" height="170" class="perf-log">
             <div class="buy-bookmarks">
               <a href="#" class="buy" onclick="openCart()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="cart-pic-cat-gr">
